# packastack

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
.github/: copilot-instructions.md
packastack/: __init__.py  cli.py  constants.py  exceptions.py  logging_setup.py
packastack/cmds/: __init__.py  import_tarballs.py
packastack/debian/: __init__.py  control.py  version.py
packastack/gbp/: __init__.py  buildpackage.py
packastack/git/: __init__.py  repo.py
packastack/importer/: __init__.py  base.py  beta.py  candidate.py  openstack.py  release.py  snapshot.py
packastack/launchpad/: __init__.py  client.py  lpci.py  repositories.py
packastack/package/: __init__.py  source.py  uscan.py
resources/: packastack-logo.xcf
tests/: __init__.py  test_cli.py  test_constants.py  test_exceptions.py  test_logging_setup.py  test_releases.py
tests/cmds/: __init__.py  test_import_tarballs.py
tests/debian/: __init__.py  test_control.py  test_version.py
tests/gbp/: __init__.py  test_buildpackage.py
tests/git/: __init__.py  test_repo.py
tests/importer/: __init__.py  test_base.py  test_beta.py  test_candidate.py  test_openstack.py  test_release.py  test_snapshot.py
tests/integration/: test_cli_logging_end_to_end.py
tests/launchpad/: __init__.py  test_client.py  test_lpci.py  test_repositories.py
tests/package/: test_control.py  test_source.py  test_uscan.py  test_version.py
